--- a/server/views/pages/offence/offence-code.njk
+++ b/server/views/pages/offence/offence-code.njk
@@ -43,7 +43,7 @@
                             class="govuk-button"
                             data-module="govuk-button"
                             data-qa="continue-button"
-                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-offence-code{{ "?submitToEditOffence=true" if submitToEditOffence }}">
+                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ chargeUuid }}/submit-offence-code{{ "?submitToEditOffence=true" if submitToEditOffence }}">
                         Continue
                     </button>
 
