--- a/server/views/pages/sentencing/delete-sentence-in-chain.njk
+++ b/server/views/pages/sentencing/delete-sentence-in-chain.njk
@@ -10,7 +10,7 @@
                 heading: "Deleting this sentence will break the consecutive chain",
                 primaryAction: {
                     text: "Yes, delete the sentence",
-                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/"+ offenceReference +"/continue-delete-sentence-in-chain",
+                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/"+ chargeUuid +"/continue-delete-sentence-in-chain",
                     attributes: {
                         "data-qa": "continue-button"
                     }
