--- a/server/views/pages/sentencing/making-sentence-consecutive.njk
+++ b/server/views/pages/sentencing/making-sentence-consecutive.njk
@@ -10,7 +10,7 @@
                 heading: "Changing what this sentence is consecutive to will affect the consecutive chain",
                 primaryAction: {
                     text: "Yes, change the consecutive chain",
-                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/"+ offenceReference +"/continue-making-sentence-consecutive",
+                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/"+ chargeUuid +"/continue-making-sentence-consecutive",
                     attributes: {
                         "data-qa": "continue-button"
                     }
