--- a/server/views/pages/sentencing/making-sentence-forthwith.njk
+++ b/server/views/pages/sentencing/making-sentence-forthwith.njk
@@ -10,7 +10,7 @@
                 heading: "Making this sentence forthwith will affect the consecutive chain",
                 primaryAction: {
                     text: "Yes, make the sentence forthwith",
-                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/"+ offenceReference +"/continue-making-sentence-forthwith",
+                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/"+ chargeUuid +"/continue-making-sentence-forthwith",
                     attributes: {
                         "data-qa": "continue-button"
                     }
