--- a/server/views/pages/offence/offence-name.njk
+++ b/server/views/pages/offence/offence-name.njk
@@ -29,7 +29,7 @@
                             class="govuk-button"
                             data-module="govuk-button"
                             data-qa="continue-button"
-                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-offence-name{{ "?submitToEditOffence=true" if submitToEditOffence }}">
+                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ chargeUuid }}/submit-offence-name{{ "?submitToEditOffence=true" if submitToEditOffence }}">
                         Continue
                     </button>
 
