--- a/server/views/partials/displayAllOffenceCards.njk
+++ b/server/views/partials/displayAllOffenceCards.njk
@@ -22,15 +22,15 @@
         actions: {
             items: [
                 {
-                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/load-edit-offence",
+                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.chargeUuid + "/load-edit-offence",
                     text: "Edit",
                     visuallyHiddenText: "edit offence",
                     attributes: {
-                        'data-qa': 'edit-offence-link-' + offence.index
+                        'data-qa': 'edit-offence-link-' + offence.chargeUuid
                     }
                 },
                 {
-                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/delete-offence",
+                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.chargeUuid + "/delete-offence",
                     text: "Delete",
                     visuallyHiddenText: "delete offence"
                 }
