--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -18,7 +18,7 @@
                     }
                 }) }}
             {% endif %}
-            
+
             {{ govukButton({
                 text: "Add an offence" ,
                 classes: "govuk-button--link",
@@ -50,7 +50,7 @@
                         actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/load-edit-offence",
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.chargeUuid + "/load-edit-offence",
                                     text: "Edit",
                                     visuallyHiddenText: "edit offence"
                                 }
@@ -59,13 +59,13 @@
                         listItems: {
                             classes: "govuk-!-margin-top-4 govuk-!-margin-bottom-2",
                             items: [{
-                                html: '<a href="/person/'+ nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + offence.index + '/update-offence-outcome" data-qa="update-outcome-link-'+ offence.index +'">Update outcome</a>'
+                                html: '<a href="/person/'+ nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + offence.chargeUuid + '/update-offence-outcome" data-qa="update-outcome-link-'+ offence.chargeUuid +'">Update outcome</a>'
                             }]
                         }
                     })
                 }}
             {% endfor %}
-            
+
             <h2 class="govuk-heading-m govuk-!-margin-top-8">Offences with updated outcomes</h2>
 
             {% for offence in changedOffences %}
@@ -90,7 +90,7 @@
                         actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/load-edit-offence",
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.chargeUuid + "/load-edit-offence",
                                     text: "Edit",
                                     visuallyHiddenText: "edit offence"
                                 }
