--- a/server/views/pages/offence/alternative-period-length.njk
+++ b/server/views/pages/offence/alternative-period-length.njk
@@ -5,7 +5,7 @@
 {% set pageTitle = applicationName + " - Add " + periodLengthHeader %}
 
 {% block pageContent %}
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-alternative-period-length{{ submitQuery }}">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ chargeUuid }}/submit-alternative-period-length{{ submitQuery }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/offenceCaption.njk" %}
 
@@ -17,7 +17,6 @@
                     }
                 }) %}
 
-                
                 {{
                     alternativeSentenceLength({
                         id: "firstSentenceLength",
